crag purge option
